[package]
name = "krampui"
version = "1.0.0"
authors = ["Snipcola"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["blocking"] }
sysinfo = "0.30.7"
serde_json = "1"
rdev = "0.5.3"
ws = "0.9.2"
lazy_static = "1.4.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
